--- a/arch/arm/configs/aspeed_g5_defconfig
+++ b/arch/arm/configs/aspeed_g5_defconfig
@@ -23,7 +23,7 @@ CONFIG_MACH_ASPEED_G5=y
 CONFIG_MACH_ASPEED_G6=y
 # CONFIG_CACHE_L2X0 is not set
 CONFIG_SMP=y
-# CONFIG_ARM_CPU_TOPOLOGY is not set ok
+# CONFIG_ARM_CPU_TOPOLOGY is not set
 CONFIG_VMSPLIT_2G=y
 CONFIG_NR_CPUS=2
 CONFIG_HIGHMEM=y
